--- a/Frontend/taller_serviexpress 0.0.1/taller_serviexpress 0.0.1/Site.Master
+++ b/Frontend/taller_serviexpress 0.0.1/taller_serviexpress 0.0.1/Site.Master
@@ -51,7 +51,7 @@
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li><a runat="server" href="~/">Inicio</a></li>
+                        <li><a runat="server" href="index.aspx">Inicio</a></li>
                         <li><a runat="server" href="~/About">Acerca de</a></li>
                         <li><a runat="server" href="~/Contact">Contacto</a></li>
                     </ul>
