--- a/Frontend/Probando/Probando/Views/Shared/_Layout.cshtml
+++ b/Frontend/Probando/Probando/Views/Shared/_Layout.cshtml
@@ -19,6 +19,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
                 </button>
                 @Html.ActionLink("Serviexpress", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
@@ -28,6 +30,8 @@
                     <li>@Html.ActionLink("Acerca de", "About", "Home")</li>
                     <li>@Html.ActionLink("Contacto", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Reservar", "../Reserva")</li>
+                    <li>@Html.ActionLink("Iniciar Sesion", "Login", "Test")</li>
+                    <li>@Html.ActionLink("Registrar", "Registrar", "Test")</li>
                 </ul>
             </div>
         </div>
