--- a/Frontend/Probando/Probando/Views/Test/Registrar.cshtml
+++ b/Frontend/Probando/Probando/Views/Test/Registrar.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Probando.Models.Cliente
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Registrar";
 }
 
-<h2>Create</h2>
+<h2>Registrar</h2>
 
 @using (Html.BeginForm())
 {
