Revert "Merge branch 'master' of https://github.com/AlexMeraTec/ServiExpress"
This reverts commit 663045e3dae7b2df94e0c5d853a98a502badf89f, reversing
changes made to bf4a8d26c40e1287f94e8b5f7d1f584124c9894f.

--- a/Frontend/Probando/Probando/Views/Shared/_Layout.cshtml
+++ b/Frontend/Probando/Probando/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
                     <li>@Html.ActionLink("Contacto", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Reservar", "../Reserva")</li>
                     <li>@Html.ActionLink("Iniciar Sesion", "Login", "Test")</li>
-                    <li>@Html.ActionLink("Registrar", "Create", "Cliente")</li>
+                    <li>@Html.ActionLink("Registrar", "Registrar", "Test")</li>
                 </ul>
             </div>
         </div>
