--- a/Frontend/Probando/Probando/Views/Shared/_Layout.cshtml
+++ b/Frontend/Probando/Probando/Views/Shared/_Layout.cshtml
@@ -9,32 +9,77 @@
 
     @Styles.Render("~/Content/css")
     @Styles.Render("~/Content/jquery-ui.css")
+    @Styles.Render("~/Content/jquery-ui.css")
+    @Styles.Render("~/layout/styles/layout.css")
+    <style type="text/css">
+        .auto-style1 {
+            background-color: #FFFFFF;
+        }
+    </style>
 
 </head>
-<body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Serviexpress", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Inicio", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Acerca de", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contacto", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("Reservar", "../Reserva")</li>
-                    <li>@Html.ActionLink("Iniciar Sesion", "Login", "Test")</li>
-                    <li>@Html.ActionLink("Registrar", "Registrar", "Test")</li>
+
+    <div class="wrapper row0">
+        <div id="topbar" class="hoc clear">
+            <!-- ################################################################################################ -->
+            <div class="fl_left">
+                <ul>
+                    <li><i class="fa fa-phone"></i> +56 (9) 12345678</li>
+                    <li><i class="fa fa-envelope-o"></i> ServiExpres@servexp.com</li>
                 </ul>
             </div>
+            <div class="fl_right">
+                <ul>
+                    <li><a href="../HOME"><i class="fa fa-lg fa-home"></i></a></li>
+                    <li><a href="../Test/Login">iniciar</a></li>
+                    <li><a href="../Cliente/Create">Registrase</a></li>
+                </ul>
+            </div>
+            <!-- ################################################################################################ -->
         </div>
+    </div>
+    <div class="bgded overlay" style="background-image:url('../../Content/images/demo/backgrounds/01.png');">
+    <!-- ################################################################################################ -->
+    <div class="wrapper row1">
+        <header id="header" class="hoc clear">
+            <!-- ################################################################################################ -->
+            <div id="logo" class="fl_left">
+                <h1><a href="index.html">ServiExpress</a></h1>
+            </div>
+            <nav id="mainav" class="fl_right">
+                <ul class="clear">
+                    <li class="active"><a href="index.html">Inicio</a></li>
+                    <li>
+                        <a class="drop" href="#">dropdown</a>
+                        <ul>
+                            <li><a href="pages/gallery.html">Galeria</a></li>
+                            <li><a href="pages/full-width.html">Full Width</a></li>
+                            <li><a href="pages/sidebar-left.html">Sidebar Left</a></li>
+                            <li><a href="pages/sidebar-right.html">Sidebar Right</a></li>
+                            <li><a href="pages/basic-grid.html">Basic Grid</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a class="drop" href="#">Dropdown</a>
+                        <ul>
+                            <li><a href="../../reservaasp/Index.aspx">Reservar hora</a></li>
+                            <li>
+                                <a class="drop" href="#">Level 2 + Drop</a>
+                                <ul>
+                                    <li><a href="#">Level 3</a></li>
+                                    <li><a href="#">Level 3</a></li>
+                                    <li><a href="#">Level 3</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#">Level 2</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">Link Text</a></li>
+                    <li><a href="#">Link Text</a></li>
+                </ul>
+            </nav>
+            <!-- ################################################################################################ -->
+        </header>
     </div>
     <div class="container body-content">
         @RenderBody()
@@ -43,14 +88,17 @@
             <p>&copy; @DateTime.Now.Year - Powered by 4tarevolucion.com para Serviexpress</p>
         </footer>
     </div>
+    <body>
+        @Scripts.Render("~/bundles/bootstrap")
+        @Scripts.Render("~/bundles/modernizr")
+        @Scripts.Render("~/bundles/jquery")
+        @Scripts.Render("~/Scripts/jquery.min.js")
+        @Scripts.Render("~/Scripts/jquery-ui.js")
+        @Scripts.Render("~/Scripts/jquery.mobilemenu.js")
+        @Scripts.Render("~/Scripts/jquery.flexslider-min.js")
+        @Scripts.Render("~/Scripts/jquery.backtotop.js")
+        @Scripts.Render("~/Scripts/DatePickerReady.js")
 
-    @Scripts.Render("~/bundles/bootstrap")
-    @Scripts.Render("~/bundles/modernizr")
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/Scripts/jquery-ui.js")
-    @Scripts.Render("~/Scripts/DatePickerReady.js")
-
-
-    @RenderSection("scripts", required: false)
-</body>
+        @RenderSection("scripts", required: false)
+    </body>
 </html>
