--- a/Frontend/Probando/Probando/Views/Test/Login.cshtml
+++ b/Frontend/Probando/Probando/Views/Test/Login.cshtml
@@ -25,10 +25,9 @@
                     @Html.PasswordFor(m => m.UserPassword, new { @class = "form-control", @placeholder = "Password" })
                 </div>
             </div>
-
             <div class="form-group">
                 <div class="col-md-12">
-                    <a href="#" class="btn btn-primary " onclick="LoginUser()">Submit</a>
+                    <a href="#" class="btn btn-primary " onclick="LoginUser()" style="margin-top:2%;">Submit</a>
                 </div>
             </div>
         </form>
