--- a/Frontend/Probando/Probando/Views/Home/Index.cshtml
+++ b/Frontend/Probando/Probando/Views/Home/Index.cshtml
@@ -32,12 +32,179 @@
 
 </script>
 
+    <div id="pageintro" class="hoc clear">
+        <!-- ################################################################################################ -->
+        <div class="flexslider basicslider">
+            <ul class="slides">
+                <li>
+                    <article>
+                        <p>Bienvenido a</p>
+                        <h3 class="heading">ServiExpress</h3>
+                        <p>Contactanos para cualquier consulta y reservas de hora</p>
+                        <footer>
+                            <form class="group" method="post" action="#">
+                                <fieldset>
+                                    <legend>Sign-Up:</legend>
+                                    <input type="email" value="" placeholder="Correo aqui&hellip;">
+                                    <button class="fa fa-sign-in" type="submit" title="Submit"><em>Submit</em></button>
+                                </fieldset>
+                            </form>
+                        </footer>
+                    </article>
+                </li>
+                <li>
+                    <article>
+                        <p>Pulvinar</p>
+                        <h3 class="heading">Viverra iaculis</h3>
+                        <p>Orci nam nec dolor dapibus dignissim tortor</p>
+                        <footer><a class="btn inverse" href="#">Facilisis etiam</a></footer>
+                    </article>
+                </li>
+                <li>
+                    <article>
+                        <p>Maximus</p>
+                        <h3 class="heading">Tincidunt viverra</h3>
+                        <p>Sed feugiat tellus quisque vehicula convallis</p>
+                        <footer><a class="btn" href="#">Efficitur convallis</a></footer>
+                    </article>
+                </li>
+            </ul>
+        </div>
+        <!-- ################################################################################################ -->
+    </div>
 
 
-@using (Html.BeginForm("Index", "Home"))
+    @using (Html.BeginForm("Index", "Home"))
+    {
 
-{
-    
+        <div class="wrapper row3 coloured">
+            <main class="hoc container clear">
+                <!-- main body -->
+                <!-- ################################################################################################ -->
 
-
-}
+                <div id="introblocks">
+                    <ul class="nospace group">
+                        <li class="one_third first">
+                            <article>
+                                <div>
+                                    <h6 class="heading">Servicio 1</h6>
+                                    <p>Ex mauris faucibus libero sed maximus lobortis nunc luctus nisi luctus varius convallis [&hellip;]</p>
+                                </div>
+                                <img src="images/demo/320x180.png" alt="">
+                                <footer><a href="#">More Details</a></footer>
+                            </article>
+                        </li>
+                        <li class="one_third">
+                            <article>
+                                <div>
+                                    <h6 class="heading">Servicio 2</h6>
+                                    <p>Posuere lectus leo facilisis nisi nunc nibh nibh consectetur vel consectetur consequat eget neque [&hellip;]</p>
+                                </div>
+                                <img src="images/demo/320x180.png" alt="">
+                                <footer><a href="#">More Details</a></footer>
+                            </article>
+                        </li>
+                        <li class="one_third">
+                            <article>
+                                <div>
+                                    <h6 class="heading">SERVICIO 3</h6>
+                                    <p>Dolor in turpis ultricies faucibus nunc eu turpis lobortis iaculis suspendisse vel tincidunt lectus [&hellip;]</p>
+                                </div>
+                                <img src="images/demo/320x180.png" alt="">
+                                <footer><a href="#">More Details</a></footer>
+                            </article>
+                        </li>
+                    </ul>
+                </div>
+                <p class="center"><a class="btn inverse" href="#">Consequat commodo</a></p>
+                <!-- ################################################################################################ -->
+                <!-- / main body -->
+                <div class="clear"></div>
+            </main>
+        </div>
+        <div class="wrapper bgded overlay" style="background-image:url('images/demo/backgrounds/02.png');">
+            <section class="hoc container clear">
+                <!-- ################################################################################################ -->
+                <div class="sectiontitle center">
+                    <h3 class="heading">Augue eget iaculis mauris</h3>
+                    <p>Morbi sed molestie metus nunc malesuada lorem ut consectetur.</p>
+                </div>
+                <ul class="nospace group center">
+                    <li class="one_third first">
+                        <article>
+                            <a href="#"><i class="btmspace-30 icon fa fa-500px"></i></a>
+                            <h6 class="heading font-x1">Sodales sollicitudin</h6>
+                            <p>Cursus elit tristique et sed id convallis arcu sed ac facilisis ligula nec maximus felis imperdiet condimentum [&hellip;]</p>
+                            <footer><a href="#">Read More &raquo;</a></footer>
+                        </article>
+                    </li>
+                    <li class="one_third">
+                        <article>
+                            <a href="#"><i class="btmspace-30 icon fa fa-envira"></i></a>
+                            <h6 class="heading font-x1">Maecenas et bibendum</h6>
+                            <p>Dolor et vestibulum phasellus scelerisque magna sapien non maximus sem faucibus id vestibulum neque eros [&hellip;]</p>
+                            <footer><a href="#">Read More &raquo;</a></footer>
+                        </article>
+                    </li>
+                    <li class="one_third">
+                        <article>
+                            <a href="#"><i class="btmspace-30 icon fa fa-empire"></i></a>
+                            <h6 class="heading font-x1">Placerat ullamcorper</h6>
+                            <p>Ac iaculis eleifend nibh nulla aliquet orci quis urna tristique egestas sed scelerisque dolor ipsum placerat [&hellip;]</p>
+                            <footer><a href="#">Read More &raquo;</a></footer>
+                        </article>
+                    </li>
+                </ul>
+                <!-- ################################################################################################ -->
+            </section>
+        </div>
+            <!-- ################################################################################################ -->
+            <!-- ################################################################################################ -->
+            <!-- ################################################################################################ -->
+            <div class="wrapper row3">
+                <div class="hoc container clear">
+                    <!-- ################################################################################################ -->
+                    <div class="group">
+                        <section class="one_half first">
+                            <h6 class="heading btmspace-50">From The Blog</h6>
+                            <ul class="nospace">
+                                <li class="btmspace-30">
+                                    <article>
+                                        <h4 class="nospace"><a href="#">Facilisis mauris tellus gravida elit ac eleifend nunc lorem</a></h4>
+                                        <time class="font-xs" datetime="2045-04-06">Friday, 6<sup>th</sup> April 2045</time>
+                                    </article>
+                                </li>
+                                <li class="btmspace-30">
+                                    <article>
+                                        <h4 class="nospace"><a href="#">Felis turpis semper at velit non porttitor semper libero</a></h4>
+                                        <time class="font-xs" datetime="2045-04-05">Thursday, 5<sup>th</sup> April 2045</time>
+                                    </article>
+                                </li>
+                                <li>
+                                    <article>
+                                        <h4 class="nospace"><a href="#">Dignissim arcu nec vulputate purus semper aliquam rhoncus</a></h4>
+                                        <time class="font-xs" datetime="2045-04-04">Wednesday, 4<sup>th</sup> April 2045</time>
+                                    </article>
+                                </li>
+                            </ul>
+                        </section>
+                        <section class="one_half">
+                            <h6 class="heading btmspace-50">Newsletter</h6>
+                            <p>Sed a eros ornare pulvinar lorem eget volutpat ex fusce sollicitudin porta erat ac dictum sed nec augue augue praesent congue.</p>
+                            <p class="btmspace-30">Ullamcorper neque a bibendum dolor placerat non nulla facilisi nullam ac velit.</p>
+                            <form id="newsletter" method="post" action="#">
+                                <fieldset>
+                                    <legend>Newsletter:</legend>
+                                    <input class="btmspace-15" type="text" value="" placeholder="Name">
+                                    <input class="btmspace-15" type="text" value="" placeholder="Email">
+                                    <button type="submit" value="submit">Submit</button>
+                                </fieldset>
+                            </form>
+                        </section>
+                    </div>
+                    <!-- ################################################################################################ -->
+                </div>
+            </div>
+        
+        
+    }
