--- a/Frontend/Probando/Probando/Views/Shared/_Layout.cshtml
+++ b/Frontend/Probando/Probando/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
                 <div class="fl_right">
                     <ul>
                         <li><a href="~/HOME"><i class="fa fa-lg fa-home"></i></a></li>
-                        <li><a href="../Test/Login">iniciar</a></li>
+                        <li><a href="../Test/Login">Iniciar Sesión</a></li>
                         <li><a href="../Cliente/Create">Registrase</a></li>
                     </ul>
                 </div>
@@ -59,32 +59,22 @@
                             <ul class="clear">
                                 <li class="active"><a href="~/HOME">Inicio</a></li>
                                 <li>
-                                    <a class="drop" href="#">Repuestos</a>
+                                    <a class="drop" href="#">SERVICIOS</a>
                                     <ul>
-                                        <li><a href="pages/gallery.html">Galeria</a></li>
-                                        <li><a href="pages/full-width.html">Full Width</a></li>
-                                        <li><a href="pages/sidebar-left.html">Sidebar Left</a></li>
-                                        <li><a href="pages/sidebar-right.html">Sidebar Right</a></li>
-                                        <li><a href="pages/basic-grid.html">Basic Grid</a></li>
+                                        <li><a href="Revision.aspx">REVISÍON POR KILOMETRAJE</a></li>
+                                        <li><a href="Mantenimiento.aspx">MANTENIMIENTO</a></li>
+                                        <li><a href="Cambio.aspx">CAMBIO DE ACEITE</a></li>
+                                        <li><a href="TrenDelantero.aspx">TREN DELANTERO</a></li>
+                                        <li><a href="Freno.aspx">FRENOS</a></li>
+                                        <li><a href="Diagnostico.aspx">DIAGNÓSTICO Y SCANNER</a></li>
+                                        <li><a href="Motor.aspx">MOTOR</a></li>
+                                        <li><a href="Transmision.aspx">TRANSMISIONES</a></li>
+                                        <li><a href="Electronica.aspx">ELECTRÓNICA Y PROGRAMACIÓN</a></li>
                                     </ul>
                                 </li>
-                                <li>
-                                    <a class="drop" href="#">Servicios</a>
-                                    <ul>
-                                        <li><a href="#">Level 2</a></li>
-                                        <li>
-                                            <a class="drop" href="#">Level 2 + Drop</a>
-                                            <ul>
-                                                <li><a href="#">Level 3</a></li>
-                                                <li><a href="#">Level 3</a></li>
-                                                <li><a href="#">Level 3</a></li>
-                                            </ul>
-                                        </li>
-                                        <li><a href="#">Level 2</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="#">Link Text</a></li>
-                                <li><a href="#">Link Text</a></li>
+                                <li><a href="../../reservaasp/Index.aspx">Reservar hora</a></li>
+                                <li><a href="#">PROMOCIONES</a></li>
+                                <li>@Html.ActionLink("Contacto", "Contact", "Home")</li>
                             </ul>
                         </nav>
                     </center>
@@ -123,8 +113,7 @@
                         <li><a href="#">Contactanos</a></li>
                         <li><a href="#">Terminos</a></li>
                         <li><a href="#">Privacidad</a></li>
-                        <li><a href="#">Cookies</a></li>
-                        <li><a href="#">ÑEEEEEEEE</a></li>
+                        <li><a href="#">Cookies</a></li>                        
                     </ul>
                 </nav>
                 <ul class="faico clear">
