--- a/Frontend/Probando/Probando/Views/Home/Index.cshtml
+++ b/Frontend/Probando/Probando/Views/Home/Index.cshtml
@@ -39,33 +39,25 @@
                 <li>
                     <article>
                         <p>Bienvenido a</p>
-                        <h3 class="heading">ServiExpress</h3>
+                        <h3 class="heading">ServiExpres</h3>
                         <p>Contactanos para cualquier consulta y reservas de hora</p>
-                        <footer>
-                            <form class="group" method="post" action="#">
-                                <fieldset>
-                                    <legend>Sign-Up:</legend>
-                                    <input type="email" value="" placeholder="Correo aqui&hellip;">
-                                    <button class="fa fa-sign-in" type="submit" title="Submit"><em>Submit</em></button>
-                                </fieldset>
-                            </form>
-                        </footer>
+                        <footer><a class="btn inverse" href="../../reservaasp/Index.aspx">Agenda tu hora</a></footer>
                     </article>
                 </li>
                 <li>
                     <article>
-                        <p>Pulvinar</p>
-                        <h3 class="heading">Viverra iaculis</h3>
-                        <p>Orci nam nec dolor dapibus dignissim tortor</p>
-                        <footer><a class="btn inverse" href="#">Facilisis etiam</a></footer>
+                        <p>Encontraras</p>
+                        <h3 class="heading">MECÁNICA INTEGRAL</h3>
+                        <p>En SERVIEXPRESS realizamos todo tipo de servicios relacionados con mantención para Autos, Camionetas y Camiones. Atendemos de Lunes a Sabado.</p>
+                        <footer><a class="btn inverse" href="../../reservaasp/Index.aspx">Agenda tu hora</a></footer>
                     </article>
                 </li>
                 <li>
                     <article>
-                        <p>Maximus</p>
-                        <h3 class="heading">Tincidunt viverra</h3>
-                        <p>Sed feugiat tellus quisque vehicula convallis</p>
-                        <footer><a class="btn" href="#">Efficitur convallis</a></footer>
+                        <p>Encontraras</p>
+                        <h3 class="heading">REALIZAMOS SCANNER MULTIMARCAS</h3>
+                        <p>En SERVIEXPRESS contamos con servicios de Scanner para todas las marcas y modelos</p>
+                        <footer><a class="btn inverse" href="../../reservaasp/Index.aspx">Registrate y agenda</a></footer>
                     </article>
                 </li>
             </ul>
@@ -87,8 +79,16 @@
                         <li class="one_third first">
                             <article>
                                 <div>
-                                    <h6 class="heading">Servicio 1</h6>
-                                    <p>Ex mauris faucibus libero sed maximus lobortis nunc luctus nisi luctus varius convallis [&hellip;]</p>
+                                    <h6 class="heading">Revisión de Kilometraje</h6>                                    
+                                </div>
+                                <img src="images/demo/320x180.png" alt="">
+                                <footer><a href="../Servicio/Details">Más Detalles</a></footer>
+                            </article>
+                        </li>
+                        <li class="one_third">
+                            <article>
+                                <div>
+                                    <h6 class="heading">Mantenimiento</h6>                                    
                                 </div>
                                 <img src="images/demo/320x180.png" alt="">
                                 <footer><a href="#">More Details</a></footer>
@@ -97,26 +97,14 @@
                         <li class="one_third">
                             <article>
                                 <div>
-                                    <h6 class="heading">Servicio 2</h6>
-                                    <p>Posuere lectus leo facilisis nisi nunc nibh nibh consectetur vel consectetur consequat eget neque [&hellip;]</p>
-                                </div>
-                                <img src="images/demo/320x180.png" alt="">
-                                <footer><a href="#">More Details</a></footer>
-                            </article>
-                        </li>
-                        <li class="one_third">
-                            <article>
-                                <div>
-                                    <h6 class="heading">SERVICIO 3</h6>
-                                    <p>Dolor in turpis ultricies faucibus nunc eu turpis lobortis iaculis suspendisse vel tincidunt lectus [&hellip;]</p>
+                                    <h6 class="heading">Cambio de aceite</h6>                                    
                                 </div>
                                 <img src="images/demo/320x180.png" alt="">
                                 <footer><a href="#">More Details</a></footer>
                             </article>
                         </li>
                     </ul>
-                </div>
-                <p class="center"><a class="btn inverse" href="#">Consequat commodo</a></p>
+                </div>                
                 <!-- ################################################################################################ -->
                 <!-- / main body -->
                 <div class="clear"></div>
@@ -126,32 +114,66 @@
             <section class="hoc container clear">
                 <!-- ################################################################################################ -->
                 <div class="sectiontitle center">
-                    <h3 class="heading">Augue eget iaculis mauris</h3>
-                    <p>Morbi sed molestie metus nunc malesuada lorem ut consectetur.</p>
+                    <h3 class="heading">Servicios</h3>
+                    <p>Estamos orientados en brindar la mejor atención y servicio en la mantención de su vehículo, dándole un valor agregado y ofreciéndole la seguridad que su inversión siempre estará en buenas manos.</p>
                 </div>
                 <ul class="nospace group center">
                     <li class="one_third first">
                         <article>
-                            <a href="#"><i class="btmspace-30 icon fa fa-500px"></i></a>
-                            <h6 class="heading font-x1">Sodales sollicitudin</h6>
-                            <p>Cursus elit tristique et sed id convallis arcu sed ac facilisis ligula nec maximus felis imperdiet condimentum [&hellip;]</p>
-                            <footer><a href="#">Read More &raquo;</a></footer>
+                            <a href="Revision.aspx"><i class="btmspace-30 icon fa fa-500px"></i></a>
+                            <h2 class="heading">REVISÍON POR KILOMETRAJE</h2>
                         </article>
                     </li>
                     <li class="one_third">
                         <article>
-                            <a href="#"><i class="btmspace-30 icon fa fa-envira"></i></a>
-                            <h6 class="heading font-x1">Maecenas et bibendum</h6>
-                            <p>Dolor et vestibulum phasellus scelerisque magna sapien non maximus sem faucibus id vestibulum neque eros [&hellip;]</p>
-                            <footer><a href="#">Read More &raquo;</a></footer>
+                            <a href="Mantenimiento.aspx"><i class="btmspace-30 icon fa fa-envira"></i></a>
+                            <h2 class="heading">Mantenimiento</h2>
                         </article>
                     </li>
                     <li class="one_third">
                         <article>
-                            <a href="#"><i class="btmspace-30 icon fa fa-empire"></i></a>
-                            <h6 class="heading font-x1">Placerat ullamcorper</h6>
-                            <p>Ac iaculis eleifend nibh nulla aliquet orci quis urna tristique egestas sed scelerisque dolor ipsum placerat [&hellip;]</p>
-                            <footer><a href="#">Read More &raquo;</a></footer>
+                            <a href="Cambio.aspx"><i class="btmspace-30 icon fa fa-empire"></i></a>
+                            <h2 class="heading">CAMBIO DE ACEITE</h2>
+                        </article>
+                    </li>
+                </ul>
+                <ul class="nospace group center">
+                    <li class="one_third first">
+                        <article>
+                            <a href="TrenDelantero.aspx"><i class="btmspace-30 icon fa fa-500px"></i></a>
+                            <h2 class="heading">TREN DELANTERO</h2>
+                        </article>
+                    </li>
+                    <li class="one_third">
+                        <article>
+                            <a href="Freno.aspx"><i class="btmspace-30 icon fa fa-envira"></i></a>
+                            <h2 class="heading">FRENOS</h2>
+                        </article>
+                    </li>
+                    <li class="one_third">
+                        <article>
+                            <a href="Diagnostico.aspx"><i class="btmspace-30 icon fa fa-empire"></i></a>
+                            <h2 class="heading">DIAGNÓSTICO Y SCANNER</h2>
+                        </article>
+                    </li>
+                </ul>
+                <ul class="nospace group center">
+                    <li class="one_third first">
+                        <article>
+                            <a href="Motor.aspx"><i class="btmspace-30 icon fa fa-500px"></i></a>
+                            <h2 class="heading">MOTOR</h2>
+                        </article>
+                    </li>
+                    <li class="one_third">
+                        <article>
+                            <a href="Transmision.aspx"><i class="btmspace-30 icon fa fa-envira"></i></a>
+                            <h2 class="heading">TRANSMISIONES</h2>
+                        </article>
+                    </li>
+                    <li class="one_third">
+                        <article>
+                            <a href="Electronica.aspx"><i class="btmspace-30 icon fa fa-empire"></i></a>
+                            <h2 class="heading">ELECTRÓNICA Y PROGRAMACIÓN</h2>
                         </article>
                     </li>
                 </ul>
@@ -164,39 +186,14 @@
             <div class="wrapper row3">
                 <div class="hoc container clear">
                     <!-- ################################################################################################ -->
-                    <div class="group">
-                        <section class="one_half first">
-                            <h6 class="heading btmspace-50">From The Blog</h6>
-                            <ul class="nospace">
-                                <li class="btmspace-30">
-                                    <article>
-                                        <h4 class="nospace"><a href="#">Facilisis mauris tellus gravida elit ac eleifend nunc lorem</a></h4>
-                                        <time class="font-xs" datetime="2045-04-06">Friday, 6<sup>th</sup> April 2045</time>
-                                    </article>
-                                </li>
-                                <li class="btmspace-30">
-                                    <article>
-                                        <h4 class="nospace"><a href="#">Felis turpis semper at velit non porttitor semper libero</a></h4>
-                                        <time class="font-xs" datetime="2045-04-05">Thursday, 5<sup>th</sup> April 2045</time>
-                                    </article>
-                                </li>
-                                <li>
-                                    <article>
-                                        <h4 class="nospace"><a href="#">Dignissim arcu nec vulputate purus semper aliquam rhoncus</a></h4>
-                                        <time class="font-xs" datetime="2045-04-04">Wednesday, 4<sup>th</sup> April 2045</time>
-                                    </article>
-                                </li>
-                            </ul>
-                        </section>
+                    <div class="group">                        
                         <section class="one_half">
-                            <h6 class="heading btmspace-50">Newsletter</h6>
-                            <p>Sed a eros ornare pulvinar lorem eget volutpat ex fusce sollicitudin porta erat ac dictum sed nec augue augue praesent congue.</p>
-                            <p class="btmspace-30">Ullamcorper neque a bibendum dolor placerat non nulla facilisi nullam ac velit.</p>
+                            <h6 class="heading btmspace-50">contacto</h6>
+                            <p>Ingresa tus datos en el siguiente formulario y presiona el botón enviar. Te contactaremos a la brevedad.</p>
                             <form id="newsletter" method="post" action="#">
                                 <fieldset>
                                     <legend>Newsletter:</legend>
-                                    <input class="btmspace-15" type="text" value="" placeholder="Name">
-                                    <input class="btmspace-15" type="text" value="" placeholder="Email">
+                                    <input class="btmspace-15" type="text" value="" placeholder="Email" />
                                     <button type="submit" value="submit">Submit</button>
                                 </fieldset>
                             </form>
