--- a/Frontend/Probando/Probando/Views/Servicio/Index.cshtml
+++ b/Frontend/Probando/Probando/Views/Servicio/Index.cshtml
@@ -41,9 +41,9 @@
             @Html.DisplayFor(modelItem => item.precio)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+            @Html.ActionLink("Edit", "Edit", new { id=item.id_servicios }) |
+            @Html.ActionLink("Details", "Details", new { id=item.id_servicios}) |
+            @Html.ActionLink("Delete", "Delete", new { id=item.id_servicios })
         </td>
     </tr>
 }
